[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/game_scene/world_objects/projectiles/generics/scripts/projectile.gd" type="Script" id=1]
[ext_resource path="res://scenes/game_scene/particles/particle.gd" type="Script" id=2]






[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
params_blend_mode = 1
params_cull_mode = 2
params_billboard_mode = 2
params_billboard_keep_scale = true
albedo_color = Color( 1, 0.945098, 0, 0.423529 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.1, 1, 0.1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.5 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="PackedScene" id=4]
_bundled = {
"conn_count": 1,
"conns": PoolIntArray( 1073741826, 1073741825, 26, 25, 2, 0 ),
"editable_instances": [  ],
"names": PoolStringArray( "hit", "CPUParticles", "material_override", "cast_shadow", "emitting", "amount", "lifetime", "one_shot", "explosiveness", "mesh", "flag_align_y", "flag_rotate_y", "spread", "gravity", "initial_velocity", "angle", "angle_random", "scale_amount", "scale_amount_curve", "script", "Timer", "Timer", "wait_time", "one_shot", "autostart", "kill", "timeout" ),
"node_count": 2,
"node_paths": [ NodePath("."), NodePath("."), NodePath("Timer") ],
"nodes": PoolIntArray( -1, -1, 1, 0, -1, 18, 2, 0, 3, 1, 4, 2, 5, 3, 6, 4, 7, 5, 8, 6, 9, 7, 10, 8, 11, 9, 12, 10, 13, 11, 14, 12, 15, 13, 16, 14, 17, 15, 18, 16, 19, 17, 0, 1073741824, 0, 21, 20, -1, 3, 22, 18, 23, 19, 24, 20, 0 ),
"variants": [ SubResource( 1 ), 0, false, 70, 0.05, true, 0.17, SubResource( 2 ), true, true, 180.0, Vector3( 0, 0, 0 ), 4.0, 180.0, 1.0, 0.4, SubResource( 3 ), ExtResource( 2 ), 0.05, true, true ],
"version": 2
}

[sub_resource type="CapsuleMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 0.435294 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.198906, 0.688142, 0.365878 )

[node name="projectile_0_laser" type="Area"]
transform = Transform( -1, 0, 8.74228e-008, 0, 1, 0, -8.74228e-008, 0, -1, 0, 0, 0 )
collision_layer = 262144
collision_mask = 131073
script = ExtResource( 1 )
method_to_call = "on_hit"
hit_particle = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.3, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.25, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0331972, 0 )
shape = SubResource( 8 )

[node name="death_timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_laser_00_body_entered"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
